--- a/member.html
+++ b/member.html
@@ -104,8 +104,20 @@
 
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
-          <h4 class="mb-3">募集中</h4>
-          <p class="mb-3"><a href="https://ice.inf.kyushu-u.ac.jp/join.html"><font color="#0050a0">研究室への受入について</font></a></p>
+          <p class="mb-3">M1</p>
+          <img class="fit-picture mb-3" src="./images/Nishimura_1.jpg" onmouseover="this.src='./images/Nishimura_2.jpg'" onmouseout="this.src='./images/Nishimura_1.jpg'" height="150" alt="Sosuke Nishimura" />
+          <h4 class="mb-1">西村 草介</h4>
+          <p class="mb-2">Sosuke Nishimura</p>
+          <p class="mb-2 email">nishimura[at]ice.inf.kyushu-u.ac.jp</p>
+          <p class="mb-0">音楽情報処理</p>
+        </div>
+        <div class="col-lg-4 col-md-6 member-item">
+          <p class="mb-3">M1</p>
+          <img class="fit-picture mb-3" src="./images/Sugimoto_1.jpg" height="150" alt="Yu Sugimoto" />
+          <h4 class="mb-1">杉本 悠</h4>
+          <p class="mb-2">Yu Sugimoto</p>
+          <p class="mb-2 email">sugimoto[at]ice.inf.kyushu-u.ac.jp</p>
+          <p class="mb-0">音楽情報処理</p>
         </div>
       </div>
 
@@ -116,19 +128,19 @@
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
-          <img class="fit-picture mb-3" src="./images/Nishimura_1.jpg" onmouseover="this.src='./images/Nishimura_2.jpg'" onmouseout="this.src='./images/Nishimura_1.jpg'" height="150" alt="Sosuke Nishimura" />
-          <h4 class="mb-1">西村 草介</h4>
-          <p class="mb-2">Sosuke Nishimura</p>
-          <p class="mb-2 email">nishimura[at]ice.inf.kyushu-u.ac.jp</p>
-          <p class="mb-0">音楽情報処理</p>
+          <img class="fit-picture mb-3" src="./images/Huga_1.jpg" height="150" alt="Rindou Akiyoshi" />
+          <h4 class="mb-1">秋吉 倫道</h4>
+          <p class="mb-2">Rindou Akiyoshi</p>
+          <p class="mb-2 email">akiyoshi[at]ice.inf.kyushu-u.ac.jp</p>
+          <p class="mb-0"></p>
         </div>
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
-          <img class="fit-picture mb-3" src="./images/Sugimoto_1.jpg" height="150" alt="Yu Sugimoto" />
-          <h4 class="mb-1">杉本 悠</h4>
-          <p class="mb-2">Yu Sugimoto</p>
-          <p class="mb-2 email">sugimoto[at]ice.inf.kyushu-u.ac.jp</p>
-          <p class="mb-0">音楽情報処理</p>
+          <img class="fit-picture mb-3" src="./images/Huga_1.jpg" height="150" alt="Satoshi Onoue" />
+          <h4 class="mb-1">尾上 悟嗣</h4>
+          <p class="mb-2">Satoshi Onoue</p>
+          <p class="mb-2 email">onoue[at]ice.inf.kyushu-u.ac.jp</p>
+          <p class="mb-0"></p>
         </div>
       </div>
 
