--- a/member_en.html
+++ b/member_en.html
@@ -102,8 +102,18 @@
 
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
-          <h4 class="mb-3">Accepting applications</h4>
-          <p class="mb-3"><a href="https://ice.inf.kyushu-u.ac.jp/join_en.html"><font color="#0050a0">How to join our lab</font></a></p>
+          <p class="mb-3">M1</p>
+          <img class="fit-picture mb-3" src="./images/Nishimura_1.jpg" onmouseover="this.src='./images/Nishimura_2.jpg'" onmouseout="this.src='./images/Nishimura_1.jpg'" height="150" alt="Sosuke Nishimura" />
+          <h4 class="mb-3">Sosuke Nishimura</h4>
+          <p class="mb-2 email">nishimura[at]ice.inf.kyushu-u.ac.jp</p>
+          <p class="mb-0">Music information processing</p>
+        </div>
+        <div class="col-lg-4 col-md-6 member-item">
+          <p class="mb-3">M1</p>
+          <img class="fit-picture mb-3" src="./images/Sugimoto_1.jpg" height="150" alt="Yu Sugimoto" />
+          <h4 class="mb-3">Yu Sugimoto</h4>
+          <p class="mb-2 email">sugimoto[at]ice.inf.kyushu-u.ac.jp</p>
+          <p class="mb-0">Music information processing</p>
         </div>
       </div>
 
@@ -115,17 +125,17 @@
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
-          <img class="fit-picture mb-3" src="./images/Nishimura_1.jpg" onmouseover="this.src='./images/Nishimura_2.jpg'" onmouseout="this.src='./images/Nishimura_1.jpg'" height="150" alt="Sosuke Nishimura" />
-          <h4 class="mb-3">Sosuke Nishimura</h4>
-          <p class="mb-2 email">nishimura[at]ice.inf.kyushu-u.ac.jp</p>
-          <p class="mb-0">Music information processing</p>
+          <img class="fit-picture mb-3" src="./images/Huga_1.jpg" height="150" alt="Rindou Akiyoshi" />
+          <h4 class="mb-3">Rindou Akiyoshi</h4>
+          <p class="mb-2 email">akiyoshi[at]ice.inf.kyushu-u.ac.jp</p>
+          <p class="mb-0"></p>
         </div>
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
-          <img class="fit-picture mb-3" src="./images/Sugimoto_1.jpg" height="150" alt="Yu Sugimoto" />
-          <h4 class="mb-3">Yu Sugimoto</h4>
-          <p class="mb-2 email">sugimoto[at]ice.inf.kyushu-u.ac.jp</p>
-          <p class="mb-0">Music information processing</p>
+          <img class="fit-picture mb-3" src="./images/Huga_1.jpg" height="150" alt="Satoshi Onoue" />
+          <h4 class="mb-3">Satoshi Onoue</h4>
+          <p class="mb-2 email">onoue[at]ice.inf.kyushu-u.ac.jp</p>
+          <p class="mb-0"></p>
         </div>
       </div>
 
