--- a/research.html
+++ b/research.html
@@ -80,14 +80,41 @@
   <section>
     <div class="container">
 
-      <div class="text-center mx-auto mb-4">
+<!--      <div class="text-center mx-auto mb-4">
         <h2>研究内容</h2>
       </div>
-
       <div class="text-center mb-5">
         準備中
-      </div>
+      </div>-->
 
+      <div class="text-center mx-auto mb-4">
+        <h2>研究プロジェクト</h2>
+      </div>
+      <div class="text-center mb-4">
+        科研費 基盤研究(A) No. 25H01148<br>
+        「音楽制作過程の理論モデルと深層学習の階層的統合に基づく自動採譜の研究」<br>
+        2025年4月 - 2029年3月（代表）
+      </div>
+      <div class="text-center mb-4">
+        科研費 基盤研究(A) No. 25H01169<br>
+        「構成論的アプローチによる進化音楽学の構築」<br>
+        2025年4月 - 2030年3月（分担）
+      </div>
+      <div class="text-center mb-4">
+        ピティナ音楽研究所<br>
+        「ピアノ演奏指導・練習支援に関する音楽情報処理の研究」<br>
+        2024年12月 - 2026年3月
+      </div>
+      <div class="text-center mb-4">
+        JST 創発的研究支援事業 No. JPMJPR226X<br>
+        「理論と社会的実験で築く知能と文化の進化動力学」<br>
+        2023年4月 - 2026年3月（代表）
+      </div>
+      <div class="text-center mb-4">
+        科研費 基盤研究(B) No. 22H03661<br>
+        「深層・統計学習と非平衡系物理の理論に基づく文化と知能の進化モデルの研究」<br>
+        2022年4月 - 2025年3月（代表）
+      </div>
 
     </div>
   </section>
@@ -95,7 +122,7 @@
 
   <footer class="footer_section">
     <div class="container">
-      <p>&copy; 2024 All Rights Reserved by ICE Lab.</p>
+      <p>&copy; 2025 All Rights Reserved by ICE Lab.</p>
     </div>
   </footer>
 
