--- a/research_en.html
+++ b/research_en.html
@@ -78,13 +78,44 @@
   <section>
     <div class="container">
 
-      <div class="text-center mx-auto mb-4">
+<!--      <div class="text-center mx-auto mb-4">
         <h2>Research</h2>
       </div>
 
       <div class="text-center mb-5">
         Now preparing.
+      </div>-->
+
+      <div class="text-center mx-auto mb-4">
+        <h2>Research Projects</h2>
       </div>
+
+      <div class="text-center mb-4">
+        JSPS Grant-in-Aid for Scientific Research (A) No. 25H01148<br>
+        Study on Automatic Music Transcription Based on the Hierarchical Integration of Theoretical Models of Music Production Process and Deep Learning<br>
+        2022 Apr - 2029 Mar (PI)
+      </div>
+      <div class="text-center mb-4">
+        JSPS Grant-in-Aid for Scientific Research (A) No. 25H01169<br>
+        Construction of Evolutionary Musicology from a Constructivist Perspective<br>
+        2022 Apr - 2030 Mar (co-investigator)
+      </div>
+      <div class="text-center mb-4">
+        PTNA Research Institute of Music<br>
+        Music Information Processing Research on Piano Performance Instruction and Practice Support<br>
+        2024年12月 - 2026年3月
+      </div>
+      <div class="text-center mb-4">
+        JST FOREST No. JPMJPR226X<br>
+        Evolutionary Dynamics of Intelligence and Culture Built through Theoretical Modeling and Social Experiments<br>
+        2023 Apr - 2026 Mar (PI)
+      </div>
+      <div class="text-center mb-4">
+        JSPS Grant-in-Aid for Scientific Research (B) No. 22H03661<br>
+        Study on Evolutionary Models of Culture and Intelligence Based on Deep/Statistical Learning and Non-Equilibrium Physics Theory<br>
+        2022 Apr - 2025 Mar (PI)
+      </div>
+
 
     </div>
 
@@ -93,7 +124,7 @@
 
   <footer class="footer_section">
     <div class="container">
-      <p>&copy; 2024 All Rights Reserved by ICE Lab.</p>
+      <p>&copy; 2025 All Rights Reserved by ICE Lab.</p>
     </div>
   </footer>
 
