--- a/seminar.html
+++ b/seminar.html
@@ -142,7 +142,12 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
-        (1) 2024.10.30 北原鉄朗氏（日本大学）<br>
+        (2) 2025.04.08 <a href="https://aip.riken.jp/labs/goalorient_tech/music_inf_intell/?lang=ja">浜中雅俊氏（理化学研究所AIP）</a><br>
+        「AIデータ分析に基づく音楽能力支援」
+      </div>
+      <hr>
+      <div class="text-center mx-auto mb-4">
+        (1) 2024.10.30 <a href="https://www.kthrlab.jp/">北原鉄朗氏（日本大学）</a><br>
         「音に関する研究の紹介：北原研究室の事例に基づいて」
       </div>
 
