--- a/seminar_en.html
+++ b/seminar_en.html
@@ -140,7 +140,12 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
-        (1) 2024.10.30 Prof. Tetsuro Kitahara (Nihon University)<br>
+        (2) 2025.04.08 <a href="https://aip.riken.jp/labs/goalorient_tech/music_inf_intell/?lang=en">Dr. Masatoshi Hamanaka (RIKEN AIP)</a><br>
+        “Music ability enhancement via AI-powered data analysis”
+      </div>
+      <hr>
+      <div class="text-center mx-auto mb-4">
+        (1) 2024.10.30 <a href="https://www.kthrlab.jp/">Prof. Tetsuro Kitahara (Nihon University)</a><br>
         “Introducing research on sound: studies at Kitahara Lab”
       </div>
 
