--- a/seminar.html
+++ b/seminar.html
@@ -139,7 +139,13 @@ ul.msr_newslist01 li time {
         研究室で開催しているセミナーで外部の研究者を招待して講演会を行っています。
       </div>
 
+https://researchmap.jp/read0195467?lang=en
 
+      <hr>
+      <div class="text-center mx-auto mb-4">
+        (3) 2025.04.08 <a href="https://gyoseki.asia-u.ac.jp/aauhp/KgApp?kyoinId=ymkdygsyggy">東条敏（亜細亜大学）</a><br>
+        「人口動力学と繰り返し学習モデル」
+      </div>
       <hr>
       <div class="text-center mx-auto mb-4">
         (2) 2025.04.08 <a href="https://aip.riken.jp/labs/goalorient_tech/music_inf_intell/?lang=ja">浜中雅俊氏（理化学研究所AIP）</a><br>
