--- a/seminar_en.html
+++ b/seminar_en.html
@@ -140,6 +140,11 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
+        (3) 2025.04.08 <a href="https://gyoseki.asia-u.ac.jp/aauhp/KgApp?kyoinId=ymkdygsyggy">Prof. Satoshi Tojo (Asia University)</a><br>
+        “Population dynamics and repetitive learning models”
+      </div>
+      <hr>
+      <div class="text-center mx-auto mb-4">
         (2) 2025.04.08 <a href="https://aip.riken.jp/labs/goalorient_tech/music_inf_intell/?lang=en">Dr. Masatoshi Hamanaka (RIKEN AIP)</a><br>
         “Music ability enhancement via AI-powered data analysis”
       </div>
