--- a/seminar.html
+++ b/seminar.html
@@ -141,6 +141,11 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
+        (4) 2025.06.02 <a href="https://tatsuropfgt.github.io/">稲葉達郎（東北大学）</a><br>
+        「Transformerの音楽生成への応用例/LLMの原理解明に向けて」
+      </div>
+      <hr>
+      <div class="text-center mx-auto mb-4">
         (3) 2025.04.08 <a href="https://gyoseki.asia-u.ac.jp/aauhp/KgApp?kyoinId=ymkdygsyggy">東条敏（亜細亜大学）</a><br>
         「人口動力学と繰り返し学習モデル」
       </div>
