--- a/seminar_en.html
+++ b/seminar_en.html
@@ -140,6 +140,11 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
+        (4) 2025.06.02 <a href="https://tatsuropfgt.github.io/">Mr. Tatsuro Inaba (Tohoku University)</a><br>
+        “Application of Transformers for music generation/Towards understanding the principle of LLMs”
+      </div>
+      <hr>
+      <div class="text-center mx-auto mb-4">
         (3) 2025.04.08 <a href="https://gyoseki.asia-u.ac.jp/aauhp/KgApp?kyoinId=ymkdygsyggy">Prof. Satoshi Tojo (Asia University)</a><br>
         “Population dynamics and repetitive learning models”
       </div>
