--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ ul.msr_newslist01 li time {
                 リンク
               </h5>
               <div class="info_links">
-                <a href="https://ipsj-sigmus.sakura.ne.jp/sigmus/">
+                <a href="https://sigmus.jp/">
                   情報処理学会 音楽情報科学研究会 (SIGMUS)
                 </a>
                 <a href="https://sites.google.com/view/icetseminar/home">
