--- a/member_en.html
+++ b/member_en.html
@@ -123,15 +123,15 @@
       <div class="row g-4 mb-4">
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
-          <img class="fit-picture mb-3" src="./images/Huga_1.jpg" height="150" alt="Rindou Akiyoshi" />
+          <img class="fit-picture mb-3" src="./images/Akiyoshi_1.jpg" height="150" alt="Rindou Akiyoshi" />
           <h4 class="mb-3">Rindou Akiyoshi</h4>
-          <p class="mb-0"></p>
+          <p class="mb-0">Music information processing</p>
         </div>
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
-          <img class="fit-picture mb-3" src="./images/Huga_1.jpg" height="150" alt="Satoshi Onoue" />
+          <img class="fit-picture mb-3" src="./images/Onoue_1.jpg" height="150" alt="Satoshi Onoue" />
           <h4 class="mb-3">Satoshi Onoue</h4>
-          <p class="mb-0"></p>
+          <p class="mb-0">Music information processing</p>
         </div>
       </div>
 
