--- a/member.html
+++ b/member.html
@@ -129,14 +129,14 @@
           <img class="fit-picture mb-3" src="./images/Akiyoshi_1.jpg" height="150" alt="Rindou Akiyoshi" />
           <h4 class="mb-1">秋吉 倫道</h4>
           <p class="mb-2">Rindou Akiyoshi</p>
-          <p class="mb-0"></p>
+          <p class="mb-0">音楽情報処理</p>
         </div>
         <div class="col-lg-4 col-md-6 member-item">
           <p class="mb-3">B4</p>
-          <img class="fit-picture mb-3" src="./images/Huga_1.jpg" height="150" alt="Satoshi Onoue" />
+          <img class="fit-picture mb-3" src="./images/Onoue_1.jpg" height="150" alt="Satoshi Onoue" />
           <h4 class="mb-1">尾上 悟嗣</h4>
           <p class="mb-2">Satoshi Onoue</p>
-          <p class="mb-0"></p>
+          <p class="mb-0">音楽情報処理</p>
         </div>
       </div>
 
