--- a/seminar.html
+++ b/seminar.html
@@ -141,12 +141,17 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
-        (4) 2025.06.02 <a href="https://tatsuropfgt.github.io/">稲葉達郎（東北大学）</a><br>
+        (5) 2025.08.06 <a href="https://sites.google.com/view/koutakilab">上瀧剛氏（熊本大学）</a><br>
+        「半自動楽器演奏システムとその展望」
+      </div>
+      <hr>
+      <div class="text-center mx-auto mb-4">
+        (4) 2025.06.02 <a href="https://tatsuropfgt.github.io/">稲葉達郎氏（東北大学）</a><br>
         「Transformerの音楽生成への応用例/LLMの原理解明に向けて」
       </div>
       <hr>
       <div class="text-center mx-auto mb-4">
-        (3) 2025.04.08 <a href="https://gyoseki.asia-u.ac.jp/aauhp/KgApp?kyoinId=ymkdygsyggy">東条敏（亜細亜大学）</a><br>
+        (3) 2025.04.08 <a href="https://gyoseki.asia-u.ac.jp/aauhp/KgApp?kyoinId=ymkdygsyggy">東条敏氏（亜細亜大学）</a><br>
         「人口動力学と繰り返し学習モデル」
       </div>
       <hr>
