--- a/seminar_en.html
+++ b/seminar_en.html
@@ -140,12 +140,17 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
+        (5) 2025.08.06 <a href="https://sites.google.com/view/koutakilab">Dr. Gou Koutaki (Kumamoto University)</a><br>
+        “Semiautomatic Music Instrument Performance Systems and Their Prospects”
+      </div>
+      <hr>
+      <div class="text-center mx-auto mb-4">
         (4) 2025.06.02 <a href="https://tatsuropfgt.github.io/">Mr. Tatsuro Inaba (Tohoku University)</a><br>
         “Application of Transformers for music generation/Towards understanding the principle of LLMs”
       </div>
       <hr>
       <div class="text-center mx-auto mb-4">
-        (3) 2025.04.08 <a href="https://gyoseki.asia-u.ac.jp/aauhp/KgApp?kyoinId=ymkdygsyggy">Prof. Satoshi Tojo (Asia University)</a><br>
+        (3) 2025.04.08 <a href="https://gyoseki.asia-u.ac.jp/aauhp/KgApp?kyoinId=ymkdygsyggy">Dr. Satoshi Tojo (Asia University)</a><br>
         “Population dynamics and repetitive learning models”
       </div>
       <hr>
@@ -155,7 +160,7 @@ ul.msr_newslist01 li time {
       </div>
       <hr>
       <div class="text-center mx-auto mb-4">
-        (1) 2024.10.30 <a href="https://www.kthrlab.jp/">Prof. Tetsuro Kitahara (Nihon University)</a><br>
+        (1) 2024.10.30 <a href="https://www.kthrlab.jp/">Dr. Tetsuro Kitahara (Nihon University)</a><br>
         “Introducing research on sound: studies at Kitahara Lab”
       </div>
 
