--- a/index_en.html
+++ b/index_en.html
@@ -171,10 +171,10 @@ ul.msr_newslist01 li time {
 
           <div class="carousel-item">
             <div class="container">
-              <img src="images/202406_BBQ.jpg" alt="">
+              <img src="images/fig_OpenCampus2025.jpg" alt="">
               <div class="description">
-                <h2 style="color: #111111;">
-                  BBQ<br>(2024.6.7)
+                <h2>
+                  Open Campus
                 </h2>
               </div>
 <!--              <a href="">Read More</a>-->
