--- a/publication.html
+++ b/publication.html
@@ -94,6 +94,20 @@
         <h3 id="Journal"><font color="#990000">Journal Papers | 雑誌論文</font></h3>
         <ol class="pub" reversed>
 
+<li>Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf" target="_blank"><font color="#222222">How music styles have evolved? -Music evolution analysis using data-scientific methods-</font></a></strong> (in Japanese)<br>
+<em>Journal of the Acoustical Society of Japan</em>, Vol. 81, No. 7, pp. 496-503, July 2025.<br>
+中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">音楽スタイルはどう変わってきたか? -データ科学的手法による音楽進化解析-</font></a></strong><br>
+<em>日本音響学会誌誌</em>, Vol. 81, No. 7, pp. 496-503, July 2025.
+
+<li>Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf" target="_blank"><font color="#222222">Trends and perspectives of music generation research</font></a></strong> (in Japanese)<br>
+<em>The Journal of the Institute of Image Information and Television Engineers</em>, Vol. 78, No. 4, pp. 385-389, July 2024.<br>
+中村栄太<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">音楽生成研究の動向と展望</font></a></strong><br>
+<em>映像情報メディア学会誌</em>, Vol. 78, No. 4, pp. 385-389, July 2024.
+
 <li>Tengyu Deng, Eita Nakamura, Ryo Nishikimi, Kazuyoshi Yoshii<br>
 <strong><a href="https://www.nowpublishers.com/article/Details/SIP-20240016"><font color="#222222">End-to-end singing transcription based on CTC and HSMM decoding with a refined score representation</font></a></strong> <a href="https://www.nowpublishers.com/article/Details/SIP-20240016" target="_blank"><img src="https://eita-nakamura.github.io/images/externallink.png" height="18px" alt=""></a><br>
 <em>APSIPA Transactions on Signal and Information Processing</em>, Vol. 13, No. 5, e404, pp. 1-26, 2024.<br>
@@ -232,6 +246,22 @@
         <h3 id="ConferencePaper"><font color="#990000">Conference Papers (Refereed) | 会議論文 (査読あり)</font></h3>
 
         <ol class="pub" reversed>
+
+<li>Yu Sugimoto, Jun-You Wang, Li Su, Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">Singing MIDI transcription with music language models: Formulation and comparison</font></a></strong> <a href="https://eita-nakamura.github.io/articles/.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 17th Asia Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)</em>, pp. ??-??, October 2025.
+
+<li>Sosuke Nishimura, Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">Evaluation score prediction for Japanese songs based on melody fitness to lyrics</font></a></strong> <a href="https://eita-nakamura.github.io/articles/.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 17th Asia Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)</em>, pp. ??-??, October 2025.
+
+<li>Ryoko Oda, Eita Nakamura, Daniel Pahr, Henry Ehlers, Eduard Groeller, Renata G. Raidou, Takayuki Itoh<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">ArtEvoViewer: A system for visualizing interpersonal influence among painters</font></a></strong> <a href="https://eita-nakamura.github.io/articles/.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<em>Proc. 29th International Conference on Information Visualisation (IV)</em>, pp. ??-??, August 2025.
+
+<li>Tatsuro Inaba, Kazuyoshi Yoshii, Eita Nakamura<br>
+<strong><a href="https://eita-nakamura.github.io/articles/.pdf"><font color="#222222">On the importance of time and pitch relativity for transformer-based symbolic music generation</font></a></strong> <a href="https://eita-nakamura.github.io/articles/.pdf"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
+<a href="https://doi.org/10.1109/APSIPAASC63619.2025.10849230"><em>Proc. 16th Asia Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC)</em></a>, pp. ??-??, December 2024.
 
 <li>Fabian C. Moss, Eita Nakamura<br>
 <strong><a href="https://eita-nakamura.github.io/articles/Moss_etal_HarmonyEvolution_CHR2024.pdf" target="_blank"><font color="#222222">Modeling the evolution of harmony in popular music from different cultural contexts</font></a></strong> <a href="https://eita-nakamura.github.io/articles/Moss_etal_HarmonyEvolution_CHR2024.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px"></a><br>
@@ -467,9 +497,77 @@
 
         <ol class="pub" reversed>
 
+<li>中村栄太<br>
+<strong><font color="#222222">作曲スタイルに関する進化駆動力の統計推論手法の構築</font></strong><br>
+<em>第144回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-144, No. 27, pp. 1-7, Sep 2025.
+
+<li>伊藤貴之, 中村栄太<br>
+<strong><font color="#222222">吹奏楽演奏分析のためのチューナーマイク録音に対する採譜モデルの適応学習</font></strong><br>
+<em>第144回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-144, No. 25, pp. 1-7, Sep 2025.
+
+<li>尾上悟嗣, 杉本悠, 中村栄太<br>
+<strong><font color="#222222">吹奏楽演奏分析のためのチューナーマイク録音に対する採譜モデルの適応学習</font></strong><br>
+<em>第144回情報処理学会音楽情報科学研究会</em>, 28-5, Sep 2025.
+
+<li>杉本悠, Jun-You Wang, Li Su, 中村栄太<br>
+<strong><font color="#222222">音楽言語モデルを用いた歌声 MIDI 採譜の定式化と比較</font></strong><br>
+<em>第144回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-144, No. 8, pp. 1-7, Sep 2025. <font color="#ff0080">(学生奨励賞)</font>
+
+<li>高橋舞, 小林未知数, 中村栄太, 大向一輝<br>
+<strong><font color="#222222">ピアニストの楽譜への規範意識と演奏における演奏様式の関係</font></strong><br>
+<em>⽇本⾳楽知覚認知学会2025年度春季研究発表会</em>, JSMPC2025(1)-10, pp. 1-6, June 2025.
+
+<li>小林未知数, 高橋舞, 中村栄太<br>
+<strong><font color="#222222">マルチモーダルDTWに基づいたピアノ演奏MIDIデータにおけるフレーズ・アーチングの分析</font></strong><br>
+<em>第143回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-143, No. 12, pp. 1-7, June 2025.
+
+<li>小田稜子, 中村栄太, 伊藤貴之<br>
+<strong><font color="#222222">西洋絵画における画家間の影響関係の可視化と特徴量の比較</font></strong><br>
+<em>2025年度人工知能学会全国大会</em>, 3M4-OS-7a-04, pp. 1-4, May 2025.
+
+<li>西村草介, 中村栄太<br>
+<strong><font color="#222222">深層生成モデルと作品選択モデルに基づく歌詞付きメロディの評価値予測</font></strong><br>
+<em>2025年度人工知能学会全国大会</em>, 3O5-OS-22a-01, pp. 1-4, May 2025.
+
+<li>杉本悠, 中村栄太<br>
+<strong><font color="#222222">作曲スタイル認識を導入したRNNトランスデューサに基づく歌声MIDI採譜</font></strong><br>
+<em>第87回情報処理学会全国大会</em>, 2P-08, March 2025. <font color="#ff0080">(学生奨励賞)</font>
+
+<li>西村草介, 中村栄太<br>
+<strong><font color="#222222">歌詞の条件付きメロディ生成モデルに基づく歌唱曲の評価手法</font></strong><br>
+<em>第87回情報処理学会全国大会</em>, 2P-07, March 2025. <font color="#ff0080">(学生奨励賞)</font>
+
+<li>小田稜子, 中村栄太, 伊藤貴之<br>
+<strong><font color="#222222">ArtEvoViewer : 画家個人間の影響関係を可視化するシステム</font></strong><br>
+<em>第87回情報処理学会全国大会</em>, 1W-05, March 2025. <font color="#ff0080">(学生奨励賞)</font>
+
+<li>高橋舞, 小林未知数, 大向一輝, 中村栄太<br>
+<strong><font color="#222222">ピアノ演奏MIDIデータに基づいたフレーズ・アーチングの分析</font></strong><br>
+<em>第142回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-142, No. 60, pp. 1-6, March 2025.
+
+<li>杉本悠, 中村栄太<br>
+<strong><font color="#222222">歌声MIDI採譜における作曲スタイルを導入した言語モデルの効果の検証</font></strong><br>
+<em>第142回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-142, No. 33, pp. 1-3, March 2025.
+
+<li>西村草介, 中村栄太<br>
+<strong><font color="#222222">歌詞の音韻特徴量に対する適合度を考慮した歌唱曲の生成と自動評価</font></strong><br>
+<em>第142回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-142, No. 35, pp. 1-3, March 2025.
+
+<li>小田稜子, 中村栄太, 伊藤貴之<br>
+<strong><font color="#222222">西洋絵画における作者の影響関係を可視化するユーザインタフェース</font></strong><br>
+<em>第32回インタラクティブシステムとソフトウェアに関するワークショップ (WISS 2024)</em>, 1-B06, December 2024.
+
+<li>Eita Nakamura<br>
+<strong><font color="#222222">Bayesian model of multiparental cultural transmission for reference network estimation</font></strong><br>
+<em>Cultural Evolution Society Conference (CES)</em>, September 2024.
+
 <li>Mai Takahashi, Michikazu Kobayashi, Eita Nakamura, Ikki Ohmukai<br>
 <strong><font color="#222222">Analysis of performance style by MIDI piano recordings</font></strong><br>
 <em>Proc. 13th Annual Conference of the Japanese Association for Digital Humanities (JADH)</em>, September 2024.
+
+<li>稲葉達郎, 吉井和佳, 中村栄太<br>
+<strong><font color="#222222">記号音楽生成における時間と音高相対性の重要性</font></strong><br>
+<em>第141回情報処理学会音楽情報科学研究会</em>, Vol. 2024-MUS-141, No. 3, pp. 1-7, August 2024.
 
 <li>小田稜子, 中村栄太, 伊藤貴之<br>
 <strong><a href="https://eita-nakamura.github.io/articles/小田ら_画家影響度可視化_可視化情報シンポジウム2024.pdf" target="_blank"><font color="#222222">色彩スタイルにもとづく創作者の影響度の可視化</font></a></strong> <a href="https://eita-nakamura.github.io/articles/小田ら_画家影響度可視化_可視化情報シンポジウム2024.pdf" target="_blank"><img src="https://eita-nakamura.github.io/images/pdf.png" height="18px" alt=""></a><br>
@@ -481,15 +579,15 @@
 
 <li>平松祐紀, 中川慧, 高野海斗, 中村栄太<br>
 <strong>Stock to Music: 多変量株価時系列データの音楽変換</strong><br>
-<em>2024年度 人工知能学会全国大会（第38回）</em>, to appear, June 2024.
+<em>2024年度 人工知能学会全国大会（第38回）</em>, No. 3Xin2-37, pp. 1-4, June 2024.
 
 <li>古江真輝, 中村栄太, 伊藤貴之<br>
 <strong>色彩スタイルにもとづく画家ネットワークの可視化</strong><br>
-<em>第86回情報処理学会全国大会</em>, to appear, March 2024.
+<em>第86回情報処理学会全国大会</em>, 7P-03, March 2024.
 
 <li>中村栄太<br>
 <strong><font color="#222222">創作知識の進化モデルに基づく作曲スタイルの変遷過程の分析</font></strong><br>
-<em>第139回情報処理学会音楽情報科学研究報告</em>, to appear, pp. 1-6, March 2024.
+<em>第139回情報処理学会音楽情報科学研究報告</em>, Vol. 2024-MUS-139, No. 2, pp. 1-6, March 2024.
 
 <li>中村栄太, 伊藤貴之<br>
 <strong><font color="#222222">TREXIV: 時刻スタンプ付き高次元データのための対話的可視化に基づくトレンド抽出手法</font></strong><br>
@@ -497,7 +595,7 @@
 
 <li>高橋舞, 小林未知数, 中村栄太, 大向一輝<br>
 <strong><font color="#222222">MIDIピアノを用いたピアノコンクールの合格者と不合格者の演奏における拍間隔変化の比較</font></strong><br>
-<em>第134回情報処理学会人文科学とコンピュータ研究報告</em>, to appear, pp. 1-5, February 2024.
+<em>第134回情報処理学会人文科学とコンピュータ研究報告</em>, Vol. 2024-CH-134, No. 8, pp. 1-5, February 2024.
 
 <li>中村栄太<br>
 <strong><font color="#222222">日本のポピュラー音楽におけるメロディー特徴量の進化分析</font></strong><br>
