--- a/publication.html
+++ b/publication.html
@@ -502,7 +502,7 @@
 <em>第144回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-144, No. 27, pp. 1-7, Sep 2025.
 
 <li>伊藤貴之, 中村栄太<br>
-<strong><font color="#222222">吹奏楽演奏分析のためのチューナーマイク録音に対する採譜モデルの適応学習</font></strong><br>
+<strong><font color="#222222">ポピュラー音楽の進化過程の可視化</font></strong><br>
 <em>第144回情報処理学会音楽情報科学研究会</em>, Vol. 2025-MUS-144, No. 25, pp. 1-7, Sep 2025.
 
 <li>尾上悟嗣, 杉本悠, 中村栄太<br>
