--- a/seminar.html
+++ b/seminar.html
@@ -141,6 +141,11 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
+        (6) 2025.11.21 <a href="https://sites.google.com/view/koutakilab">Ichiro Fujinaga氏（カナダ・マギル大学）</a><br>
+        「On the Virtues of Lazy Machines: Rethinking Efficiency, Effort, and Intelligence」
+      </div>
+      <hr>
+      <div class="text-center mx-auto mb-4">
         (5) 2025.08.06 <a href="https://sites.google.com/view/koutakilab">上瀧剛氏（熊本大学）</a><br>
         「半自動楽器演奏システムとその展望」
       </div>
