--- a/seminar_en.html
+++ b/seminar_en.html
@@ -140,6 +140,11 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
+        (6) 2025.11.21 <a href="https://sites.google.com/view/koutakilab">Dr. Ichiro Fujinaga (McGill University)</a><br>
+        “On the Virtues of Lazy Machines: Rethinking Efficiency, Effort, and Intelligence”
+      </div>
+      <hr>
+      <div class="text-center mx-auto mb-4">
         (5) 2025.08.06 <a href="https://sites.google.com/view/koutakilab">Dr. Gou Koutaki (Kumamoto University)</a><br>
         “Semiautomatic Music Instrument Performance Systems and Their Prospects”
       </div>
