--- a/seminar.html
+++ b/seminar.html
@@ -141,7 +141,7 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
-        (6) 2025.11.21 <a href="https://sites.google.com/view/koutakilab">Ichiro Fujinaga氏（カナダ・マギル大学）</a><br>
+        (6) 2025.11.21 <a href="https://www.mcgill.ca/music/ichiro-fujinaga">Ichiro Fujinaga氏（カナダ・マギル大学）</a><br>
         「On the Virtues of Lazy Machines: Rethinking Efficiency, Effort, and Intelligence」
       </div>
       <hr>
