--- a/seminar_en.html
+++ b/seminar_en.html
@@ -140,7 +140,7 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
-        (6) 2025.11.21 <a href="https://sites.google.com/view/koutakilab">Dr. Ichiro Fujinaga (McGill University)</a><br>
+        (6) 2025.11.21 <a href="https://www.mcgill.ca/music/ichiro-fujinaga">Dr. Ichiro Fujinaga (McGill University)</a><br>
         “On the Virtues of Lazy Machines: Rethinking Efficiency, Effort, and Intelligence”
       </div>
       <hr>
