--- a/seminar.html
+++ b/seminar.html
@@ -141,6 +141,11 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
+        (7) 2025.11.21 <a href="https://www.tsuda.ac.jp/academics/dept-cs/faculty/uemura.html">植村あい子氏（津田塾大学）</a><br>
+        「感性をつなぐ音楽理解と生成」
+      </div>
+      <hr>
+      <div class="text-center mx-auto mb-4">
         (6) 2025.11.21 <a href="https://www.mcgill.ca/music/ichiro-fujinaga">Ichiro Fujinaga氏（カナダ・マギル大学）</a><br>
         「On the Virtues of Lazy Machines: Rethinking Efficiency, Effort, and Intelligence」
       </div>
