--- a/seminar_en.html
+++ b/seminar_en.html
@@ -140,6 +140,10 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
+        (7) 2025.11.21 <a href="https://www.tsuda.ac.jp/academics/dept-cs/faculty/uemura.html">Dr. Aiko Uemura (Tsuda University)</a><br>
+        “Music Understanding and Generation Connecting Human Sensibilities”
+      <hr>
+      <div class="text-center mx-auto mb-4">
         (6) 2025.11.21 <a href="https://www.mcgill.ca/music/ichiro-fujinaga">Dr. Ichiro Fujinaga (McGill University)</a><br>
         “On the Virtues of Lazy Machines: Rethinking Efficiency, Effort, and Intelligence”
       </div>
