--- a/seminar.html
+++ b/seminar.html
@@ -141,6 +141,11 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
+        (8) 2025.12.12 <a href="https://sites.google.com/view/kenjiitao/%E3%83%9B%E3%83%BC%E3%83%A0">板尾健司氏（理化学研究所）</a><br>
+        「蒸留学習による累積的文化進化」
+      </div>
+      <hr>
+      <div class="text-center mx-auto mb-4">
         (7) 2025.11.21 <a href="https://www.tsuda.ac.jp/academics/dept-cs/faculty/uemura.html">植村あい子氏（津田塾大学）</a><br>
         「感性をつなぐ音楽理解と生成」
       </div>
