--- a/seminar_en.html
+++ b/seminar_en.html
@@ -140,6 +140,10 @@ ul.msr_newslist01 li time {
 
       <hr>
       <div class="text-center mx-auto mb-4">
+        (8) 2025.12.12 <a href="https://sites.google.com/view/kenjiitao/home?authuser=0">Dr. Kenji Itao (RIKEN)</a><br>
+        “Cumulative Cultural Evolution by Distillation Learning”
+      <hr>
+      <div class="text-center mx-auto mb-4">
         (7) 2025.11.21 <a href="https://www.tsuda.ac.jp/academics/dept-cs/faculty/uemura.html">Dr. Aiko Uemura (Tsuda University)</a><br>
         “Music Understanding and Generation Connecting Human Sensibilities”
       <hr>
